[package]
name = "rustkit_bindgen"
version = "0.0.1"
authors = ["Michael Wu <mwu.code@gmail.com>"]
description = "The bindings generator used by RustKit"
repository = "https://github.com/michaelwu/RustKit"
license = "Apache-2.0/MIT"

[dependencies]
clang-sys = { version = "0.29.2", features = ["runtime", "clang_9_0"] }
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"
